WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60370
Fix two warnings of unused variables.
https://bugs.webkit.org/show_bug.cgi?id=60370
Summary
Fix two warnings of unused variables.
Alexis Menard (darktears)
Reported
2011-05-06 06:44:55 PDT
Fix two warnings of unused variables.
Attachments
Patch
(2.37 KB, patch)
2011-05-06 06:47 PDT
,
Alexis Menard (darktears)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexis Menard (darktears)
Comment 1
2011-05-06 06:47:10 PDT
Created
attachment 92580
[details]
Patch
Darin Adler
Comment 2
2011-05-06 09:43:53 PDT
Comment on
attachment 92580
[details]
Patch OK
WebKit Commit Bot
Comment 3
2011-05-06 13:30:16 PDT
Comment on
attachment 92580
[details]
Patch Clearing flags on attachment: 92580 Committed
r85973
: <
http://trac.webkit.org/changeset/85973
>
WebKit Commit Bot
Comment 4
2011-05-06 13:30:20 PDT
All reviewed patches have been landed. Closing bug.
Ademar Reis
Comment 5
2011-05-20 05:15:16 PDT
Revision
r85973
cherry-picked into qtwebkit-2.2 with commit 9906bdc <
http://gitorious.org/webkit/qtwebkit/commit/9906bdc
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug