2011-05-06  Alexis Menard  <alexis.menard@openbossa.org>

Reviewed by Darin Adler.

        Fix two warnings of unused variables.
        https://bugs.webkit.org/show_bug.cgi?id=60370

        Remove two unused local variable from the code.

        No new tests, the existing ones should cover.

        * rendering/RenderFlexibleBox.cpp:
        (WebCore::RenderFlexibleBox::layoutVerticalBox):
        * svg/animation/SVGSMILElement.cpp:
        (WebCore::SVGSMILElement::calculateNextProgressTime):

Canonical link: https://commits.webkit.org/75654@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85973 268f45cc-cd09-0410-ab3c-d52691b4dbfc