Source/WebCore/svg/animation/SVGSMILElement.cpp
@@ -847,7 +847,6 @@ SMILTime SVGSMILElement::calculateNextProgressTime(SMILTime elapsed) const
         // If duration is indefinite the value does not actually change over time. Same is true for <set>.
         SMILTime simpleDuration = this->simpleDuration();
         if (simpleDuration.isIndefinite() || hasTagName(SVGNames::setTag)) {
-            SMILTime repeatCount = this->repeatCount();
             SMILTime repeatingDurationEnd = m_intervalBegin + repeatingDuration();
             // We are supposed to do freeze semantics when repeating ends, even if the element is still active. 
             // Take care that we get a timer callback at that point.
